--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-.header{
-  background-color: #171919;
+.header {
+  background-color: #232f3e;
 }
